them quan li don hang va mot so logic

--- a/WebBanRauCu/Areas/Admin/Views/Product/Details.cshtml
+++ b/WebBanRauCu/Areas/Admin/Views/Product/Details.cshtml
@@ -1,48 +1,64 @@
 ﻿@model WebBanRauCu.Models.Product
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Chi tiết sản phẩm";
 }
 
-<h1>Details</h1>
+<div class="container-fluid py-4">
+    <div class="card shadow">
+        <div class="card-header bg-info text-white">
+            <h4 class="mb-0 fw-bold">CHI TIẾT SẢN PHẨM: @Model.Name</h4>
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <div class="p-3 border rounded bg-light">
+                        @if (!string.IsNullOrEmpty(Model.ImageUrl))
+                        {
+                            <img src="@Model.ImageUrl" class="img-fluid rounded shadow-sm" style="max-height: 300px;" alt="@Model.Name" />
+                        }
+                        else
+                        {
+                            <div class="text-muted py-5">
+                                <i class="bi bi-image fs-1"></i>
+                                <p>Chưa có hình ảnh</p>
+                            </div>
+                        }
+                    </div>
+                </div>
 
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category.Name)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+                <div class="col-md-8">
+                    <table class="table table-bordered table-striped">
+                        <tbody>
+                            <tr>
+                                <th class="w-25 bg-light">Tên sản phẩm</th>
+                                <td class="fw-bold fs-5 text-primary">@Model.Name</td>
+                            </tr>
+                            <tr>
+                                <th class="bg-light">Giá bán</th>
+                                <td class="text-danger fw-bold fs-5">@Model.Price.ToString("#,##0") đ</td>
+                            </tr>
+                            <tr>
+                                <th class="bg-light">Danh mục</th>
+                                <td><span class="badge bg-success fs-6">@Model.Category?.Name</span></td>
+                            </tr>
+                            <tr>
+                                <th class="bg-light">Mô tả</th>
+                                <td>@Model.Description</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <div class="mt-4">
+                        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning px-4 me-2">
+                            <i class="bi bi-pencil-square"></i> Chỉnh sửa
+                        </a>
+                        <a asp-action="Index" class="btn btn-secondary px-4">
+                            <i class="bi bi-arrow-return-left"></i> Quay lại danh sách
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
