--- a/WebBanRauCu/Views/Cart/Index.cshtml
+++ b/WebBanRauCu/Views/Cart/Index.cshtml
@@ -49,7 +49,7 @@
 
         <div class="text-end">
             <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Tiếp tục mua hàng</a>
-            <a href="#" class="btn btn-success">Thanh toán ngay</a>
+            <a asp-controller="Cart" asp-action="Checkout" class="btn btn-success">Thanh toán ngay</a>
         </div>
     }
     else
