--- a/WebBanRauCu/Views/Shared/_LoginPartial.cshtml
+++ b/WebBanRauCu/Views/Shared/_LoginPartial.cshtml
@@ -20,6 +20,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
                     <a class="dropdown-item"
+                       asp-area=""
                        asp-controller="Account"
                        asp-action="Logout">
                         Logout
@@ -49,4 +50,3 @@
         </li>
     }
 </ul>
-
