--- a/WebBanRauCu/Views/Home/Index.cshtml
+++ b/WebBanRauCu/Views/Home/Index.cshtml
@@ -3,12 +3,13 @@
 @{
     ViewData["Title"] = "Trang chủ";
 }
-
+<div class="container">
 <div class="text-center my-4">
     <div class="p-5 bg-light border rounded-3">
         <h1 class="display-5 fw-bold text-success">Thực phẩm Sạch & Tươi Ngon</h1>
         <p class="fs-4">Cung cấp rau củ quả đạt chuẩn VietGAP ngay tại nhà bạn.</p>
     </div>
+</div>
 </div>
 
 <div class="container">
