--- a/WebBanRauCu/Views/Shared/Components/MenuLoai/Default.cshtml
+++ b/WebBanRauCu/Views/Shared/Components/MenuLoai/Default.cshtml
@@ -1,14 +1,20 @@
 ﻿@model IEnumerable<WebBanRauCu.Models.Category>
 
-<div class="list-group">
-    <a href="/" class="list-group-item list-group-item-action active bg-success border-success">
-        Danh mục sản phẩm
-    </a>
-    @foreach (var item in Model)
-    {
-        // Link này sẽ trỏ đến trang lọc sản phẩm (sẽ làm ngay sau đây)
-        <a asp-controller="Home" asp-action="FilterByCat" asp-route-id="@item.Id" class="list-group-item list-group-item-action">
-            @item.Name
+<div class="category-sidebar">
+    <div class="list-group">
+        <a href="/" class="list-group-item list-group-item-action active bg-success border-success">
+            Danh mục sản phẩm
         </a>
-    }
+        @foreach (var item in Model)
+        {
+            @* Tính toán Hue dựa trên ID để mỗi ID có 1 màu khác nhau *@
+            var hue = (item.Id * 137) % 360;
+            
+            <a asp-controller="Home" asp-action="FilterByCat" asp-route-id="@item.Id" 
+               class="list-group-item list-group-item-action category-item" 
+               style="--category-hue: @hue !important;">
+                @item.Name
+            </a>
+        }
+    </div>
 </div>
