--- a/WebBanRauCu/Views/Home/Index.cshtml
+++ b/WebBanRauCu/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Trang chủ";
 }
-
+<div class="container">
 <div class="container-fluid p-0 mb-4">
     <div class="p-5 text-center bg-image position-relative rounded-3 shadow-sm" 
          style="background-image: url('https://images.unsplash.com/photo-1610348725531-843dff563e2c?q=80&w=2670&auto=format&fit=crop'); 
@@ -31,6 +31,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 
 <div class="container">
